the problem with text alignment was resolved using align-items: start;

--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,8 @@ body {
   margin: 15rem 0;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-gap: 6rem; }
+  grid-gap: 6rem;
+  align-items: start; }
 
 .feature {
   display: grid;
